@@ -65,6 +65,47 @@ particular view on the object:
   >>> another_view.url(herd, 'something')
   'http://127.0.0.1/herd/something'
 
+It's also possible to just pass in a name. In this case, a URL to that
+view on the context object will be constructed:
+
+  >>> another_view.url('yet_another_view')
+  'http://127.0.0.1/herd/manfred/yet_another_view'
+
+The url() method supports a data argument which is converted to a CGI type query 
+string. If any of the values are of type unicode it's converted to a string 
+assuming the encoding is UTF-8.
+
+There is some object/name/data resolution code available that provides the magic 
+to make mixing of positional arguments and keyword arguments work.
+
+This is the key word argument signature::
+
+  >>> index_view.url(herd, '@@sample_view', data=dict(age=28))
+  'http://127.0.0.1/herd/@@sample_view?age=28'
+  >>> index_view.url(herd, data=dict(age=28))
+  'http://127.0.0.1/herd?age=28'
+  >>> index_view.url('@@sample_view', data=dict(age=28))
+  'http://127.0.0.1/herd/manfred/@@sample_view?age=28'
+  >>> index_view.url(data=dict(age=28))
+  'http://127.0.0.1/herd/manfred/index?age=28'
+
+There is no problem putting one of the 'reserved' arguments inside the data 
+argument or explicitely supplying 'None':
+
+  >>> index_view.url(herd, None, data=dict(name="Peter"))
+  'http://127.0.0.1/herd?name=Peter'
+
+Since order in dictionairies is arbitrary we'll test the presence of multiple 
+keywords by using find()
+
+  >>> url = index_view.url('sample_view', data=dict(a=1, b=2, c=3))
+  >>> url.find('a=1') > -1
+  True
+  >>> url.find('b=2') > -1
+  True
+  >>> url.find('c=3') > -1
+  True
+
 It works properly in the face of non-ascii characters in URLs:
 
   >>> url = another_view.url(herd, unicode('árgh', 'UTF-8'))
@@ -75,29 +116,60 @@ It works properly in the face of non-ascii characters in URLs:
   >>> urllib.unquote(url).decode('utf-8') == expected
   True
 
-It's also possible to just pass in a name. In this case, a URL to that
-view on the context object will be constructed:
-
-  >>> another_view.url('yet_another_view')
-  'http://127.0.0.1/herd/manfred/yet_another_view'
-
 Some combinations of arguments just don't make sense:
 
   >>> another_view.url('foo', 'bar')
   Traceback (most recent call last):
     ...
-  TypeError: url() takes either obj argument, obj, string arguments, or
-  string argument
+  TypeError: url() takes either obj argument, obj, string arguments, or string \
+  argument
   >>> another_view.url('foo', herd)
   Traceback (most recent call last):
     ...
-  TypeError: url() takes either obj argument, obj, string arguments, or
-  string argument
-  >>> another_view.url(herd, 'bar', 'baz')
+  TypeError: url() takes either obj argument, obj, string arguments, or string \
+  argument
+  >>> another_view.url(herd, 'bar', data='baz')
   Traceback (most recent call last):
     ...
-  TypeError: url() takes at most 3 arguments (4 given)
+  TypeError: url() data argument must be a dict.
   
+Since we're relying on urllib to do the CGI parameter encoding it's quite 
+smart but fails on unicode objects but url() is programmed to automatically
+convert unicode to UTF-8 on the fly.
+
+  >>> index_view.url(data={'name':u'Andr\xe9'})
+  'http://127.0.0.1/herd/manfred/index?name=Andr%C3%A9'
+   
+As we're relying on urllib to do the url encoding, it also converts values that
+are lists to repeated key value pairs such that key=[1,2] becomes key=1&key=2
+
+  >>> index_view.url(data={'key':[1,2]})
+  'http://127.0.0.1/herd/manfred/index?key=1&key=2'
+
+We also make sure the values in the list that are unicode instances are encoded 
+properly:
+
+  >>> result = index_view.url(data={'key':[u'\xe9',2]})
+  >>> print result
+  http://127.0.0.1/herd/manfred/index?key=%C3%A9&key=2
+
+  >>> import cgi
+  >>> print unicode(cgi.parse_qs(result.split('?')[1])['key'][0], 'utf-8')
+  é
+
+Zope magic!! Here we test casting parameters in the CGI query string:
+
+  >>> result = index_view.url('multiplier', data={'age:int':1})
+  >>> result
+  'http://127.0.0.1/herd/manfred/multiplier?age%3Aint=1'
+
+  >>> browser.open(result)
+  >>> browser.contents
+  '2'
+  >>> browser.open('http://127.0.0.1/herd/manfred/multiplier?age=1')
+  >>> browser.contents
+  '11'
+
 """
 import grok
 
@@ -119,5 +191,12 @@ class Another(grok.View):
 
 class YetAnother(grok.View):
     pass
+
+class Multiplier(grok.View):
+    def update(self, age=0):
+        self.age = age
+    
+    def render(self):
+        return unicode(self.age * 2)
 
 yetanother = grok.PageTemplate('<p tal:replace="view/url" />')
